--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ h3 {
     text-align: center;
 }
 
+.about_us_text{
+    text-align: center;
+}
 .prototype_screenshoot{
     display: block;
     margin-left: auto;
